--- a/public/slider.html
+++ b/public/slider.html
@@ -1,3 +1,3 @@
 <div ng-controller="KbnSliderVisController" class="slider-vis">
-    <div ng-bind-html="html"></div>
+    <button class="btn btn-default" type="submit" ng-click="filter(field)">Filter rating_class 0</button>
 </div>
