--- a/public/sliderOptions.html
+++ b/public/sliderOptions.html
@@ -1,6 +1,6 @@
 <div class="slider-vis-options form-group">
   <div>
-    <label>HTML</label>
+    <label>REMOVE THIS</label>
   </div>
   <textarea ng-model="vis.params.html" class="form-control" rows="20"></textarea>
 </div>
