--- a/public/slider.html
+++ b/public/slider.html
@@ -1,3 +1,3 @@
 <div ng-controller="KbnSliderVisController" class="slider-vis">
-    <button class="btn btn-default" type="submit" ng-click="filter({id: 'price', value: 200})">Filter rating_class 0</button>
+    <button class="btn btn-default" type="submit" ng-click="filter({gte:200})">Filter Price 200</button>
 </div>
