--- a/public/slider.html
+++ b/public/slider.html
@@ -3,6 +3,7 @@
     <div>
         <rzslider rz-slider-model="slider.min"
                   rz-slider-high="slider.max"
-                  rz-slider-options="slider.options"></rzslider>
+                  rz-slider-options="slider.options"
+                  ng-disabled="!selectedField"></rzslider>
     </div>
 </div>
