--- a/public/sliderOptions.html
+++ b/public/sliderOptions.html
@@ -11,4 +11,8 @@
             ng-options="field as field.displayName group by field.type for field in $root.plugin.sliderPlugin.indexedFields">
     </select>
   </div>
+  <div class="form-group">
+    <label for="title">Title</label>
+    <input type="text" ng-model="vis.params.title" class="form-control">
+  </div>
 </div>
