--- a/public/sliderOptions.html
+++ b/public/sliderOptions.html
@@ -15,4 +15,8 @@
     <label for="title">Title</label>
     <input type="text" ng-model="vis.params.title" class="form-control">
   </div>
+    <div class="form-group">
+        <label for="icon">Font Awesome Icon Code</label>
+        <input type="text" ng-model="vis.params.icon" class="form-control" placeholder="fa-coffee">
+    </div>
 </div>
