--- a/public/sliderOptions.html
+++ b/public/sliderOptions.html
@@ -11,6 +11,28 @@
             ng-options="field as field.displayName group by field.type for field in $root.plugin.sliderPlugin.indexedFields">
     </select>
   </div>
+
+    <table class="vis-editor-agg-editor-ranges form-group">
+        <tbody><tr>
+            <th>
+                <label>From</label>
+            </th>
+            <th colspan="2">
+                <label>To</label>
+            </th>
+        </tr>
+
+        <tr>
+            <td>
+                <input type="number" step="any" name="minValue" class="form-control" ng-model="vis.params.minValue">
+            </td>
+            <td>
+                <input type="number" step="any" name="maxValue" class="form-control" ng-model="vis.params.maxValue">
+            </td>
+        </tr>
+        </tbody>
+    </table>
+
   <div class="form-group">
     <label for="title">Title</label>
     <input type="text" ng-model="vis.params.title" class="form-control">
