--- a/public/sliderOptions.html
+++ b/public/sliderOptions.html
@@ -1,17 +1,16 @@
 <div class="slider-vis-options">
-  <div class="form-group">
-    <label for="field">Field</label>
-    <select
-            class="form-control"
-            name="field"
-            required
-            ng-model="vis.params.field"
-            ng-show="$root.plugin.sliderPlugin.indexedFields.length"
-            auto-select-if-only-one="$root.plugin.sliderPlugin.indexedFields"
-            ng-options="field as field.displayName group by field.type for field in $root.plugin.sliderPlugin.indexedFields">
-    </select>
-  </div>
-
+    <div class="form-group">
+        <label for="field">Field</label>
+        <select
+                class="form-control"
+                name="field"
+                required
+                ng-model="vis.params.field"
+                ng-show="$root.plugin.sliderPlugin.indexedFields.length"
+                auto-select-if-only-one="$root.plugin.sliderPlugin.indexedFields"
+                ng-options="field as field.displayName group by field.type for field in $root.plugin.sliderPlugin.indexedFields">
+        </select>
+    </div>
     <table class="vis-editor-agg-editor-ranges form-group">
         <tbody><tr>
             <th>
@@ -32,11 +31,14 @@
         </tr>
         </tbody>
     </table>
-
-  <div class="form-group">
-    <label for="title">Title</label>
-    <input type="text" ng-model="vis.params.title" class="form-control">
-  </div>
+    <div class="form-group">
+        <label for="step">Step</label>
+        <input type="number" step="any" name="step" class="form-control" ng-model="vis.params.step">
+    </div>
+    <div class="form-group">
+        <label for="title">Title</label>
+        <input type="text" ng-model="vis.params.title" class="form-control">
+    </div>
     <div class="form-group">
         <label for="icon">Font Awesome Icon Code</label>
         <input type="text" ng-model="vis.params.icon" class="form-control" placeholder="fa-coffee">
